# yams-ghidra-plugin

./: .gitignore  LICENSE  README.md  build.py  manifest.example.json  plugin.py  plugin.spec  pyproject.toml  yams-plugin.json
.github/workflows/: build.yml  test.yml
