[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yams-ghidra-plugin"
version = "0.0.1"
description = "Ghidra plugin integration helpers for YAMS"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "YAMS Project" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.6",
  "black>=24.8",
  "pytest>=8.2",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
fix = true

[tool.black]
line-length = 100
target-version = ["py39"]
