[project]
name = "yams-ghidra-plugin"
version = "0.0.1"
description = "Ghidra binary analysis plugin for YAMS"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{ name = "YAMS Project" }]
dependencies = [
  "yams-sdk>=0.0.1",
]

[project.optional-dependencies]
ghidra = [
  "pyghidra>=1.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8.2",
  "pyinstaller>=6.0",
]
